--- a/iframe/index.html
+++ b/iframe/index.html
@@ -216,6 +216,9 @@ class img{
 	get width(){return this.t.w}
 	get height(){return this.t.h}
 	get layers(){return this.t.d}
+	get subWidth(){return this.t.w*this.w}
+	get subHeight(){return this.t.h*this.h}
+	get aspectRatio(){return this.t.w*this.w/(this.t.h*this.h)}
 	constructor(t,x=0,y=0,w=1,h=1,l=0){
 		this.t = t; this.x = x; this.y = y
 		this.w = w; this.h = h; this.l = l
@@ -484,6 +487,9 @@ Object.assign(globalThis, {
 globalThis.vec2 = (x=0,y=x)=>({x,y})
 globalThis.vec3 = (x=0,y=x,z=x)=>({x,y,z})
 globalThis.vec4 = (x=0,y=x,z=x,w=x)=>({x,y,z,w})
+vec4.white = vec4(1), vec4.black = vec4(0)
+vec3.white = vec3(1), vec3.black = vec3(0)
+vec2.white = vec2(1), vec2.black = vec2(0)
 const v2z = {x:0,y:0}
 const v3z = {x:0,y:0,z:0}
 const v4z = {x:0,y:0,z:0,w:0}
