--- a/acc.html
+++ b/acc.html
@@ -45,7 +45,7 @@
 			<span>This game is currently for testers only</span>
 			<span>Join our <a href="https://discord.gg/ufaHZXtnab" style="color: #5AE">Discord</a> to get an account key</span>
 			<span></span>
-			<span style="width: 205rem;max-width: 100%;"><input style="border: 2px #fff solid; background: #000; padding: 8px; color: white" placeholder="Account key" oninput="gotKey(this.value).then(a=>a?go():this.style.color = 'red')"></span>
+			<span style="width: 205rem;max-width: 100%;"><input style="border: 2px #fff solid; background: #000; padding: 0 8px; width: 100%; height: 100%; color: white" placeholder="Account key" oninput="gotKey(this.value).then(a=>a?go():this.style.color = 'red')"></span>
 		</div>
 	</body>
 </html>
