--- a/iframe/index.html
+++ b/iframe/index.html
@@ -581,8 +581,8 @@ class can{
 	drawMat(a=1, b=0, c=0, d=1, e=0, f=0, ...values){
 		setv(this.t,this.#m); const i = this.#shader(values)
 		const ta=this.#a,tb=this.#b,tc=this.#c,td=this.#d,te=this.#e,tf=this.#f
-		arr[i  ] = a*ta+c*tb; arr[i+1] = a*tc+c*td; arr[i+2] = a*te+c*tf+e
-		arr[i+3] = b*ta+d*tb; arr[i+4] = b*tc+d*td; arr[i+5] = b*te+d*tf+f
+		arr[i  ] = ta*a+tc*b; arr[i+1] = ta*c+tc*d; arr[i+2] = ta*e+tc*f+te
+		arr[i+3] = tb*a+td*b; arr[i+4] = tb*c+td*d; arr[i+5] = tb*e+td*f+tf
 	}
 	clear(r = 0, g = 0, b = 0, a = 0){
 		if(i)draw()
