--- a/iframe/index.html
+++ b/iframe/index.html
@@ -231,9 +231,10 @@ class img{
 		this.w = w; this.h = h; this.l = l
 	}
 	get src(){return this.t.src}
-	set src(a){if(this.t.src===null)return;this.t.src=a?typeof a=='string'?[a]:a:[];if(this.t.tex)this.unload()}
+	set src(a){if(this.t.src===null)return;this.t.src=a?typeof a=='string'?[a]:a:[];if(this.t.tex)this.delete()}
 	get loaded(){return this.t.d!=0}
 	get then(){return this.t.d==0?this.#then:null}
+	load(){if(!this.t.tex)img.load(this.t)}
 	sub(x=0, y=0, w=1, h=1, l=this.l){
 		return new img(this.t, this.x+x*this.w, this.y+y*this.h, this.w*w, this.h*h, l)
 	}
